@@ -1,3 +1,6 @@
+2002-12-31  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ test/test18.cxx, test/test32.cxx, test/test37.cxx, test/test41.cxx
+  - Reduced (expected, but still confusing) error output
 2002-12-29  Jeroen T. Vermeulen <jtv@xs4all.nl>
  include/pqxx/cursor.h, src/cursor.cxx:
   - Added absolute cursor positioning
